[project]
name = "eml-project"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
    "torch==2.11.0+cu128",
    "numpy",
    "pandas",
    "pytest",
    "jupyter",
    "ipykernel",
    "tqdm>=4.66.5",
    "transformers>=4.57.6",
    "datasets>=3.0",
    "accelerate>=1.13.0",
    "gemlite>=0.5.0",
    "matplotlib>=3.10.8",
]

[tool.uv]
index-url = "https://pypi.org/simple"
extra-index-url = ["https://download.pytorch.org/whl/cu128"]
index-strategy = "unsafe-best-match"
